--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "todo-app",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",  // Set this to the entry point file for your backend
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",  // Start script to run the backend server
-    "build": "echo \"No build step necessary\""  // Optional: Placeholder if no frontend build is required
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "connect-mongo": "^5.1.0",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "socket.io": "^4.8.1"
   }
 }
